Fix bug where overflow caused us to stop submitting OpenVR frames

Approximately every 6 minutes VRDisplay would stop submitting frames
to OpenVRRenderLoop.  The reason for this is that VRDisplay won't
submit frames with a negative frame id.

Frame id is stored as a 16-bit signed int, overflowing after 32767.
32767 frames / (90fps*60sec/min) = 6.068 min before overflow

BUG=820525

Change-Id: Ie6131f3e246f7d38fa8790e1dd27cea7ff4cbb20
Reviewed-on: https://chromium-review.googlesource.com/957523
Reviewed-by: Klaus Weidner <klausw@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542270}
Former-commit-id: 4e32317a0570c7878a2c017c81270408f1f76881