device/vr/openvr/openvr_render_loop.cc
@@ -169,8 +169,12 @@ base::WeakPtr<OpenVRRenderLoop> OpenVRRenderLoop::GetWeakPtr() {
 
 void OpenVRRenderLoop::GetVSync(
     mojom::VRPresentationProvider::GetVSyncCallback callback) {
-  int16_t frame = next_frame_id_++;
   DCHECK(is_presenting_);
+  int16_t frame = next_frame_id_;
+  next_frame_id_ += 1;
+  if (next_frame_id_ < 0) {
+    next_frame_id_ = 0;
+  }
 
   mojom::VRPosePtr pose = GetPose();
 
